--- a/src/app/group/group.html
+++ b/src/app/group/group.html
@@ -156,7 +156,7 @@
             </svg>
             <span>{{ 'GROUP.END_DATE' | translate }}</span>
           </div>
-          <div class="detail-value">{{ group.end_date }}</div>
+          <div class="detail-value">{{ formatDate(group.end_date) }}</div>
         </div>
       }
 
@@ -250,7 +250,7 @@
       </div>
       <div class="form-group">
         <label for="editEndDate">{{ 'GROUP.END_DATE' | translate }}</label>
-        <input id="editEndDate" type="text" [(ngModel)]="editingGroup.end_date" class="form-input">
+        <input id="editEndDate" type="date" [(ngModel)]="editingGroup.end_date" class="form-input">
       </div>
       <div class="form-group">
         <label for="editStatus">{{ 'GROUP.STATUS_LABEL' | translate }}</label>
@@ -261,7 +261,12 @@
       </div>
       <div class="form-group">
         <label for="editTeacher">{{ 'GROUP.TEACHER_LABEL' | translate }}</label>
-        <input id="editTeacher" type="text" [(ngModel)]="editingGroup.teacher" class="form-input">
+        <select id="editTeacher" [(ngModel)]="editingGroup.teacher" class="form-input">
+          <option value="">{{ 'GROUP.SELECT_TEACHER' | translate }}</option>
+          @for (teacher of teachers; track $index) {
+            <option [value]="teacher.username">{{ teacher.username }}</option>
+          }
+        </select>
       </div>
     </div>
     <div class="modal-footer">
